# producer-consumer

./: .gitignore  .gitmodules  .travis.yml  README.md
0-simple_cmake_poject/: CMakeLists.txt  README.md
0-simple_cmake_poject/doc/: CMakeLists.txt
0-simple_cmake_poject/inc/: simple_library.hpp
0-simple_cmake_poject/src/: main.cpp  simple_library.cpp
0-simple_cmake_poject/tests/: CMakeLists.txt  test.cpp
1-producer_consumer/: CMakeLists.txt  README.md  tmp.txt
1-producer_consumer/inc/: consumer.hpp  producer.hpp  queue.hpp  semaphore.hpp
1-producer_consumer/src/: consumer.cpp  main.cpp  producer.cpp  queue.cpp  semaphore.cpp
1-producer_consumer/tests/: CMakeLists.txt  test.cpp
cpp/: CMakeLists.txt
cpp/doc/: documentation-config.doxygen.in
cpp/inc/: main.hpp  producer.hpp  semaphore.hpp
cpp/src/: consumer.cpp  main.cpp  producer.cpp  semaphore.cpp
cpp/tests/: CMakeLists.txt
